# AlgeEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
AlgeEngine/: AlgeEngine.cpp  AlgeEngine.h  CMakeLists.txt  TriangleMesh.cpp  config.cpp  config.h  linear_algebra.cpp  linear_algebra.h  material.cpp  material.h  shader.h
AlgeEngine/components/: render_component.h
AlgeEngine/controller/: app.cpp  app.h
AlgeEngine/factories/: factory.cpp  factory.h  mesh_factory.cpp  mesh_factory.h
AlgeEngine/shaders/: fragment.txt  test.frag  test.vert  vertex.txt
AlgeEngine/systems/: animation_system.cpp  animation_system.h  camera_system.cpp  camera_system.h  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
AlgeEngine/view/: shader.cpp
